package model

enum class CellValue {
    EMPTY,
    BLACK,
    WHITE
}