package model

enum class Result{
    VALID,
    INVALID,
    GAME_OVER
}

