@startuml

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

title Othello Architecture - Swing GUI

package "model" {
    class Game {
        - id: Int
        - rules: Ruleset
        - board: Board
        - players: List<Player>
        - currentPlayer: Player
        + winner: Player?
        + blackScore: Int
        + whiteScore: Int
        + makeMove(playerId: Int, x: Int, y: Int): Result
        + getPlayers(): List<Player>
        + getId(): Int
    }

    class Player {
        + id: Int
        + name: String
        + color: Int
        + wins: Int
        + losses: Int
        + gamesPlayed: Int
        + withStats(wins, losses, gamesPlayed): Player
    }

    class Board {
        - cells: Array<Array<Cell>>
        + size: Int
        + get(x: Int, y: Int): Cell
        + set(x: Int, y: Int, cell: Cell): Board
        + count(color: Int): Int
        + isFull(): Boolean
    }

    class Cell {
        + value: CellValue
    }

    enum CellValue {
        EMPTY
        BLACK
        WHITE
    }

    enum Result {
        VALID
        INVALID
        GAME_OVER
    }

    class GameRecord {
        + id: Int
        + playerIds: List<Int>
        + winnerId: Int?
        + moves: String
        + blackScore: Int
        + whiteScore: Int
        + date: String
    }
}

package "rules" {
    interface Ruleset {
        + createBoard(): Board
        + isValidMove(board, x, y, color): Boolean
        + applyMove(board, x, y, color): Board
        + isGameOver(board): Boolean
        + getWinner(board): Int
    }

    class ClassicRules {
        + createBoard(): Board
        + isValidMove(): Boolean
        + applyMove(): Board
        + isGameOver(): Boolean
        + getWinner(): Int
    }

    class AntiReversiRules {
        + getWinner(): Int
    }

    Ruleset <|.. ClassicRules
    ClassicRules <|-- AntiReversiRules
}

package "repository" {
    interface PlayerRepository {
        + save(player: Player)
        + findById(id: Int): Player?
        + findAll(): List<Player>
    }

    interface MatchRepository {
        + save(record: GameRecord)
        + findAll(): List<GameRecord>
    }

    class JsonPlayerRepository {
        - filePath: Path
        + save(player: Player)
        + findById(id: Int): Player?
        + findAll(): List<Player>
    }

    class JsonMatchRepository {
        - filePath: Path
        + save(record: GameRecord)
        + findAll(): List<GameRecord>
    }

    PlayerRepository <|.. JsonPlayerRepository
    MatchRepository <|.. JsonMatchRepository
}

package "ui.swing" {
    class OthelloSwingApp {
        - playerRepo: PlayerRepository
        - matchRepo: MatchRepository
        - game: Game?
        - boardPanel: BoardPanel?
        - statusLabel: JLabel?
        - timer: GameTimer?
        + createAndShowGUI()
        - handleMove(x: Int, y: Int)
        - saveGameStats(g: Game)
        - showRegistryDialog(parent: Component)
    }

    class BoardPanel {
        - board: Board
        - onCellClick: (Int, Int) -> Unit
        + updateBoard(newBoard: Board)
        + paintComponent(g: Graphics)
    }

    class GameTimer {
        - seconds: Long
        - running: Boolean
        + start()
        + stop()
        + reset()
        + getFormattedTime(): String
        + setOnTick(listener: (Long) -> Unit)
    }
}

package "util" {
    class JsonUtils {
        + encodeToString(obj): String
        + decodeFromString(json): T
    }
}

' Relationships
Game *-- Ruleset : uses
Game *-- Board : owns
Game *-- Player : owns
Board *-- Cell : contains
Cell ..> CellValue : has

Ruleset ..> Board : creates/modifies
ClassicRules ..> CellValue : uses

PlayerRepository ..> Player : persists
MatchRepository ..> GameRecord : persists
JsonPlayerRepository ..> JsonUtils : serializes
JsonMatchRepository ..> JsonUtils : serializes

OthelloSwingApp --> Game : controls
OthelloSwingApp --> BoardPanel : displays
OthelloSwingApp --> PlayerRepository : saves stats
OthelloSwingApp --> MatchRepository : saves history
OthelloSwingApp --> GameTimer : tracks time

BoardPanel --> Board : renders
BoardPanel ..> CellValue : draws

GameTimer ..> OthelloSwingApp : notifies on tick



@enduml